# suarakan-be

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  diesel.toml
.gitlab-ci/: variables.yml
migrations/2025-03-26-160607_create_users/: up.sql
migrations/2025-03-26-160643_create_admins/: up.sql
migrations/2025-03-26-160700_create_updates/: up.sql
migrations/2025-03-26-160800_create_proofs/: down.sql  up.sql
migrations/2025-03-26-160810_create_incidents/: up.sql
migrations/2025-03-26-160815_create_reporters/: down.sql  up.sql
migrations/2025-03-26-160820_create_victims/: down.sql  up.sql
migrations/2025-03-26-160830_create_accused/: down.sql  up.sql
migrations/2025-03-26-160842_create_reports/: up.sql
migrations/2025-03-26-165826_create_ui_reports/: down.sql  up.sql
migrations/2025-03-26-165930_create_perempuan_reports/: down.sql  up.sql
migrations/2025-03-26-170002_create_ham_reports/: down.sql  up.sql
migrations/2025-03-26-170600_create_publications/: down.sql  up.sql
migrations/2025-04-13-183430_2025-03-26-170600_modify_adminid/: down.sql  up.sql
migrations/2025-04-13-185829_2025-04-14-015700_alter_publications/: down.sql  up.sql
migrations/2025-04-14-021012_remove_proofid_from_reports/: down.sql  up.sql
migrations/2025-04-14-021438_add_proof_to_incidents/: down.sql  up.sql
migrations/2025-04-14-021844_drop_proofs_table/: down.sql  up.sql
migrations/2025-04-14-092916_drop_reports/: up.sql
migrations/2025-04-14-093233_create_reports/: up.sql
migrations/2025-04-14-093526_drop_incidents_accused_reporter_victim/: up.sql
migrations/2025-04-14-095521_update_reports_table/: up.sql
migrations/2025-04-14-101319_drop_some_columns/: up.sql
migrations/2025-04-14-101848_edit_column_report/: up.sql
migrations/2025-04-14-102901_delete_and_add_column_report/: up.sql
src/: lib.rs  main.rs  schema.rs
src/auth/: jwt.rs
src/model/: admin.rs  (+11 more)
tests/: main.rs
(+35 files in other folders)
