[package]
name = "suarakan-be"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version = "0.8.1", features = ["macros"]}
dotenv = "0.15.0"
async-trait = "0.1"
postgres = "0.19.10"
tokio = { version = "1.32.0", features = ["full"] }
tower-http = { version = "0.5", features = ["auth", "cors"] }
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "chrono"] }
r2d2 = "0.8"
thiserror = "1.0"
jsonwebtoken = "8.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio-postgres = "0.7"
validator = { version = "0.14", features = ["derive"] }
regex = "1.11.1"
http = "1.3.1"
tracing-subscriber = "0.3.19"
html-escape = "0.2"
tower = { version = "0.4", features = ["util"] }
hyper = { version = "0.14", features = ["full"] }
pq-sys = "=0.6.3"